<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple ToDo App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_hint">Add a new item</string>
    <string name="add_button_label">Add</string>
    <string name="btn_save_label">Save</string>
    <string name="tv_editItem_label">Edit Item Below:</string>
    <string name="title_todo_activity">Simple Todo</string>
    <string name="title_editItem_activity">Edit Item</string>
    <string name="abar_deleted">1 Deleted</string>
    <string name="abar_undo">Undo</string>
    <color name="notebookColor">#FFFF99</color>
	<color name="red">#B20000</color>
	<string name="priority_label">Priority:</string>
	<string name="duetime_label">Due @:</string>
	<string name="priority_hint">5</string>
	<string name="etDueTime_hint">9:00 AM</string>
</resources>
