<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/notebookColor"
    tools:context="com.AndriodBootCamp.mytodoapp.EditItemActivity" >

    <TextView
        android:id="@+id/tvEditLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tv_editItem_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/etEditItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEditLabel"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etEditItem"
        android:layout_below="@+id/etEditItem"
        android:layout_marginTop="52dp"
        android:text="@string/priority_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <EditText
         android:id="@+id/etPriority"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tvPriority"
         android:layout_alignBottom="@+id/tvPriority"
         android:layout_alignLeft="@+id/etDueTime"
         android:layout_alignRight="@+id/tvEditLabel"
         android:ems="10"
         android:hint="@string/priority_hint"
         android:inputType="number" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPriority"
        android:layout_alignTop="@+id/tvPriority"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/etPriority"
        android:contentDescription="@string/priority_label"
        android:src="@drawable/choices" />
   
    <TextView
        android:id="@+id/tvDueTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvPriority"
        android:layout_below="@+id/tvPriority"
        android:layout_marginTop="46dp"
        android:text="@string/duetime_label" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etDueTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvDueTime"
        android:layout_alignBottom="@+id/tvDueTime"
        android:layout_alignRight="@+id/etEditItem"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/btnSave"
        android:ems="10"
        android:hint="@string/etDueTime_hint"
        android:inputType="time" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPriority"
        android:layout_below="@+id/tvPriority"
        android:layout_marginTop="114dp"
        android:onClick="onSaveItem"
        android:background="@drawable/todosave"/>
    

</RelativeLayout>
